# auto_deploy_docker.k8s

./: Cargo.toml  README.md
config/: development.toml
dockerfiles/: Dockerfile
log/: dockers.log.2023-02-18  dockers.log.2023-02-19
src/: main.rs
src/api/: docker.rs  mod.rs
src/common/: errors.rs  mod.rs  resp.rs
src/router/: mod.rs
src/schema/: docker.rs  mod.rs
src/service/: docker.rs  mod.rs
